umc.tools.ldapDn2Path: converts LDAP DN to "human readable" path; Bug #22439 ; hostname is now shown as normal text in header instead of button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.0/ucs@28137 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/style.css
+++ b/management/univention-management-console-frontend/css/style.css
@@ -48,6 +48,20 @@ form {
 	background: url(../images/bg/top.png) repeat-x top;
 }
 
+.umcHeaderText {
+	display: inline-block;
+	vertical-align: middle;
+	color: #fff;
+	height: auto;
+	background: none;
+	border-radius: 0;
+	border: none;
+	padding: 0;
+	box-shadow: none;
+	padding: 9px;
+	font-size: 15px;
+}
+
 .umcHeader .umcHeaderButton {
 	margin: 0;
 }
